k8s/overlays/production/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: taskapp
spec:
  template:
    spec:
      containers:
        - name: frontend
          image: 050751893161.dkr.ecr.us-east-1.amazonaws.com/taskapp-frontend:v1.0.1
